--- a/lib/seatrain/generators/templates/dip.yml.tt
+++ b/lib/seatrain/generators/templates/dip.yml.tt
@@ -62,7 +62,7 @@ interaction:
     service: app
     environment:
       RAILS_ENV: test
-    command: ./vnc.sh bundle exec rspec --format=documentation
+    command: .seatrain/vnc.sh bundle exec rspec --format=documentation
     compose:
       run_options: ["publish=5900:5900"]
 
@@ -78,6 +78,18 @@ interaction:
         compose:
           method: logs
           run_options: [follow, tail='200']
+<% else -%>
+  # sidekiq:
+  #  description: Run commands in sidekiq container
+  #  service: sidekiq
+  #  compose:
+  #    method: run
+  #  subcommands:
+  #    logs:
+  #      description: "Display last 200 lines of Sidekiq logs and follow"
+  #      compose:
+  #        method: logs
+  #        run_options: [follow, tail='200']
 <% end -%>
 
 <% if seatrain_use_webpacker -%>
@@ -92,12 +104,24 @@ interaction:
           run_options: [follow, tail='200']
     compose:
       run_options: [service-ports, use-aliases]
+<% else -%>
+  # webpacker:
+  #  description: Run commands towards Webpacker service
+  #  service: webpacker
+  #  subcommands:
+  #    logs:
+  #      description: Display last 200 lines of Webpacker logs and follow
+  #      compose:
+  #        method: logs
+  #        run_options: [follow, tail='200']
+  #  compose:
+  #    run_options: [service-ports, use-aliases]
 <% end -%>
 
   psql:
     description: Run Postgres psql console
     service: app
-    default_args: rc3_development
+    default_args: db_development
     command: psql -h postgres -U postgres
 
   redis-cli:
