--- a/lib/seatrain/generators/templates/.seatrain/helm/values.yaml.tt
+++ b/lib/seatrain/generators/templates/.seatrain/helm/values.yaml.tt
@@ -35,11 +35,11 @@ global:
   db:
     prepareJob:
       enabled: true
-      <%= if Rails::VERSION::MAJOR > 6 -%>
+<% if Rails::VERSION::MAJOR >= 6 -%>
       command: "rails db:prepare"
-      <% else -%>
+<% else -%>
       command: "rails db:create db:migrate"
-      <% end -%>
+<% end -%>
 
   https:
     enabled: true
