--- a/lib/seatrain/generators/templates/.github/workflows/deploy.yaml.tt
+++ b/lib/seatrain/generators/templates/.github/workflows/deploy.yaml.tt
@@ -30,12 +30,22 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-buildx-
 
+      - name: Install doctl
+        uses: digitalocean/action-doctl@v2
+        with:
+          token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
+
+<% if seatrain_uses_docr? -%>
+      - name: Log in to Digital Ocean Container Registry
+        run: doctl registry login --expiry-seconds 600
+<% else %>
       - name: Login to container registry
         uses: docker/login-action@v1
         with:
           registry: <%= seatrain_docker_server %>
           username: <%= seatrain_docker_login %>
           password: ${{ secrets.DOCKER_PASSWORD }}
+<% end -%>
 
       - name: Copy master key from a secret
         run: echo ${{ secrets.RAILS_MASTER_KEY }} > config/master.key
@@ -57,16 +67,10 @@ jobs:
             YARN_VERSION=<%= seatrain_yarn_version %>
             BUNDLER_VERSION=<%= seatrain_bundler_version %>
 
-      - name: Install doctl
-        uses: digitalocean/action-doctl@v2
-        with:
-          token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
-
       - name: Save DigitalOcean kubeconfig
-        run: doctl kubernetes cluster kubeconfig show <%= seatrain_do_cluster_name %> > $GITHUB_WORKSPACE/.kubeconfig
+        run: doctl kubernetes cluster kubeconfig save <%= seatrain_do_cluster_name %>
 
       - name: Deploy to cluster
         run: >
-          export KUBECONFIG=$GITHUB_WORKSPACE/.kubeconfig &&
 <%= generate_upgrade_string -%>
           --set-string global.image.tag=${{ steps.prep.outputs.tag }}
