--- a/lib/seatrain/generators/templates/.github/workflows/deploy.yaml.tt
+++ b/lib/seatrain/generators/templates/.github/workflows/deploy.yaml.tt
@@ -38,12 +38,12 @@ jobs:
 <% if seatrain_uses_docr? -%>
       - name: Log in to Digital Ocean Container Registry
         run: doctl registry login --expiry-seconds 600
-<% else %>
+<% else -%>
       - name: Login to container registry
         uses: docker/login-action@v1
         with:
-          registry: <%= seatrain_docker_server %>
-          username: <%= seatrain_docker_login %>
+          registry: <%= seatrain_docker_registry %>
+          username: <%= seatrain_docker_username || "${{ secrets.DOCKER_USERNAME }}"  %>
           password: ${{ secrets.DOCKER_PASSWORD }}
 <% end -%>
 
