--- a/lib/seatrain/generators/templates/.seatrain/Dockerfile.dev.tt
+++ b/lib/seatrain/generators/templates/.seatrain/Dockerfile.dev.tt
@@ -32,7 +32,7 @@ RUN curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - \
 
 # Application dependencies
 # Put all dev dependencies (e.g, vim) in ./.seatrain/Aptfile
-COPY Aptfile /tmp/Aptfile
+COPY .seatrain/Aptfile /tmp/Aptfile
 RUN apt-get update -qq && DEBIAN_FRONTEND=noninteractive apt-get -yq dist-upgrade && \
   DEBIAN_FRONTEND=noninteractive apt-get install -yq --no-install-recommends \
   libpq-dev \
