--- a/lib/seatrain/generators/templates/.seatrain/helm/templates/cron-example.yaml.tt
+++ b/lib/seatrain/generators/templates/.seatrain/helm/templates/cron-example.yaml.tt
@@ -3,28 +3,25 @@
 # metadata:
 #   name: my-cron-job
 # spec:
-#   schedule: "0 3 * * *"
+#   schedule: "0 3 * * *" # Crond schedule
 #   jobTemplate:
 #     spec:
 #       template:
 #         spec:
 #           restartPolicy: OnFailure
-#           {{- if .Values.global.image.pullSecret }}
 #           imagePullSecrets:
 #             - name: {{ .Values.global.image.pullSecret }}
-#           {{- end }}
 #           containers:
-#             - name: my-name # Give name to your job's container
+#             - name: user-sync
 #               image: {{ .Values.global.image.repository }}:{{ .Values.global.image.tag }}
 #               imagePullPolicy: {{ .Values.global.image.pullPolicy }}
 #               command:
 #                 - bundle
 #                 - exec
 #                 - rails
-#                 - name_space:task # Edit with the task you want to run 
-#           envFrom:
-#             - configMapRef:
-#                 name: common-env
-#             - secretRef:
-#                 name: {{ include "seatrain-base.fullname" . }}-secrets
-             
+#                 - my:task
+#               envFrom:
+#                 - configMapRef:
+#                     name: common-env
+#                 - secretRef:
+#                     name: {{ include "seatrain-base.fullname" . }}-secrets
