--- a/lib/seatrain/generators/templates/dip.yml.tt
+++ b/lib/seatrain/generators/templates/dip.yml.tt
@@ -121,7 +121,7 @@ interaction:
   psql:
     description: Run Postgres psql console
     service: app
-    default_args: db_development
+    default_args: <%= ActiveRecord::Base.connection_config.dig(:database) %>
     command: psql -h postgres -U postgres
 
   redis-cli:
